--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,7 @@ a.hoverline {
 } */
 
 a.hoverline:hover {
-  border-bottom: 3px solid #004d40 !important;
+  border-bottom: 3px solid #004d28 !important;
 }
 
 #skills .card.large {
@@ -472,7 +472,7 @@ small {
 /* main .teal-text */
 
 .teal-text {
-  color: #008073 !important;
+  color: #029e99 !important;
 }
 
 /* .teal-text {
@@ -482,7 +482,7 @@ small {
 /* .teal */
 
 .teal {
-  background-color: #008073 !important;
+  background-color: #029e99 !important;
 }
 
 /* .teal {
@@ -525,7 +525,7 @@ small {
     position: absolute;
   }
   nav a.button-collapse, nav a.button-collapse i {
-    color: #009688;
+    color: #056b0c;
     height: 56px;
     line-height: 56px;
   }
