--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,7 @@ ul.side-nav.fixed a {
 ul.table-of-contents li.logo a.active, ul.table-of-contents li.logo a:hover {
   border: none;
   font-weight: 200;
+  list-style: none;
 }
 
 /* ul.side-nav.fixed li.logo {
@@ -188,25 +189,30 @@ ul.side-nav.fixed li.logo {
   box-sizing: content-box;
   min-height: 90px;
   padding: 30px 30px 40px;
+  list-style: none;
 }
 
 ul.side-nav.fixed li.logo a {
   font-weight: 200;
   line-height: 100%;
+  list-style-type: none;
 }
 
 ul.table-of-contents li:not(.logo) a.active, ul.table-of-contents li:not(.logo) a:hover {
   background-color: #fafafa;
   border-left: 3px solid;
+  list-style: none;
 }
 
 ul.side-nav.fixed.table-of-contents li:not(.logo) a span, ul#slide-out li:not(.logo) a span {
   color: #333 !important;
+  list-style-type: none;
 }
 
 li.logo span {
   display: block;
   font-size: 14px;
+  list-style-type: none;
 }
 
 .brand-logo h1 {
@@ -214,6 +220,7 @@ li.logo span {
   line-height: inherit;
   margin: inherit;
   font-weight: inherit;
+  list-style-type: none;
 }
 
 .container {
