--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ nav i {
 main {
   background: url(../../assets/img/bg.png) repeat;
   padding-left: 180px;
+  
 }
 
 dl {
@@ -254,6 +255,7 @@ h3 {
 #intro.section {
   background: #09adff repeat;
   position: relative;
+  padding-bottom: 1000px;
 }
 
 #intro.section .container {
